--- a/templates/index.html
+++ b/templates/index.html
@@ -2,19 +2,19 @@
 <html>
   <head>
     <meta charset=utf-8>
-    <link rel=stylesheet href=index.css>
-    <script src=index.js></script>
+    <link rel=stylesheet href=static/index.css>
+    <script src=static/index.js></script>
   </head>
   <body>
     <div>
       Slag: <span id=throw-counter>0</span>
     </div>
     <div class=dice-container>
-      <img value=0 ondragstart="return false" onclick=keep(this) class=dice width=128 src=images/1.png>
-      <img value=1 ondragstart="return false" onclick=keep(this) class=dice width=128 src=images/1.png>
-      <img value=2 ondragstart="return false" onclick=keep(this) class=dice width=128 src=images/1.png>
-      <img value=3 ondragstart="return false" onclick=keep(this) class=dice width=128 src=images/1.png>
-      <img value=4 ondragstart="return false" onclick=keep(this) class=dice width=128 src=images/1.png>
+      <img value=0 ondragstart="return false" onclick=keep(this) class=dice width=128 src=static/images/1.png>
+      <img value=1 ondragstart="return false" onclick=keep(this) class=dice width=128 src=static/images/1.png>
+      <img value=2 ondragstart="return false" onclick=keep(this) class=dice width=128 src=static/images/1.png>
+      <img value=3 ondragstart="return false" onclick=keep(this) class=dice width=128 src=static/images/1.png>
+      <img value=4 ondragstart="return false" onclick=keep(this) class=dice width=128 src=static/images/1.png>
     </div>
     <div>
       <button onclick=rollAll()>Slå tärningar</button>
