--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset=utf-8>
-    <link rel=stylesheet href=static/index.css>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel=stylesheet href="{{ url_for('static', filename='index.css') }}">
+    <script src="https://cdn.socket.io/4.0.1/socket.io.min.js" integrity="sha384-LzhRnpGmQP+lOvWruF/lgkcqD+WDVt9fU3H4BWmwP5u5LTmkUGafMcpZKNObVMLU" crossorigin="anonymous"></script>
     <script src=static/index.js></script>
   </head>
   <body>
