--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset=utf-8>
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-    <link rel=stylesheet href="{{ url_for('static', filename='index.css') }}">
-    <script src="https://cdn.socket.io/4.0.1/socket.io.min.js" integrity="sha384-LzhRnpGmQP+lOvWruF/lgkcqD+WDVt9fU3H4BWmwP5u5LTmkUGafMcpZKNObVMLU" crossorigin="anonymous"></script>
-    <script src=static/index.js></script>
-  </head>
-  <body>
-    <div>
-      Slag: <span id=throw-counter>0</span>
-    </div>
-    <div class=dice-container>
-      <img value=0 ondragstart="return false" onclick=keep(this) class=dice width=128 src=static/images/1.png>
-      <img value=1 ondragstart="return false" onclick=keep(this) class=dice width=128 src=static/images/1.png>
-      <img value=2 ondragstart="return false" onclick=keep(this) class=dice width=128 src=static/images/1.png>
-      <img value=3 ondragstart="return false" onclick=keep(this) class=dice width=128 src=static/images/1.png>
-      <img value=4 ondragstart="return false" onclick=keep(this) class=dice width=128 src=static/images/1.png>
-    </div>
-    <div>
-      <button onclick=rollAll()>Slå tärningar</button>
-      <button onclick=nextPlayer()>Nästa spelare</button>
-    </div>
-  </body>
-</html>
+Hello World!
