index.html improved and first request for play/... shows correct counter

--- a/templates/play.html
+++ b/templates/play.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div>
-      Slag: <span id=throw-counter>0</span>
+      Slag: <span id=throw-counter>{{ counter }}</span>
     </div>
     <div class=dice-container>
       {% for data in image_data %}
