--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset=utf-8>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <script src="{{ url_for('static', filename='index.js') }}"></script>
   </head>
   <body>
     <div>
@@ -13,6 +14,7 @@
         <option value="{{ room }}">{{ room }}</option>
         {% endfor %}
       </select>
+      <button type="button" onclick="roomSelected()">Spela!</button>
     </div>
   </body>
 </html>
